Bug resolved in IE. Related to Flex and Z-Index

--- a/_cards.scss
+++ b/_cards.scss
@@ -91,6 +91,11 @@
     border-top-right-radius: 4px;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 4px;
+
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+      flex: 1 1 auto;
+    }
+    
     @include media (nml) {
       border-top-left-radius: 0px;
       border-top-right-radius: 0px;
