--- a/_eqHeight.scss
+++ b/_eqHeight.scss
@@ -1,5 +1,5 @@
 @include media(lg) {
-  div.d-flex {
+  #whatsNew div.d-flex {
 
     div[id^='ct100_PlaceHolderMain'],
     div[webpart] {
@@ -7,10 +7,10 @@
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-          -ms-flex: 1;
-              flex: 1;
+      -webkit-box-flex: 1 1 auto;
+      -webkit-flex: 1 1 auto;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto;
     }
 
     & > div {
@@ -18,10 +18,10 @@
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-flex: 1;
-      -webkit-flex: 1;
-          -ms-flex: 1;
-              flex: 1;
+      -webkit-box-flex: 1 1 auto;
+      -webkit-flex: 1 1 auto;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
@@ -29,17 +29,17 @@
               flex-direction: column;
       /* div[id^='ct100_PlaceHolderMain'] {*/
       /*   display: flex;*/
-      /*   flex: 1;*/
+      /*   flex: 1 1 auto;*/
       /* }*/
       .card {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-flex: 1;
-        -webkit-flex: 1;
-            -ms-flex: 1;
-                flex: 1;
+        -webkit-box-flex: 1 1 auto;
+        -webkit-flex: 1 1 auto;
+            -ms-flex: 1 1 auto;
+                flex: 1 1 auto;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -webkit-flex-direction: column;
@@ -51,10 +51,10 @@
           display: -webkit-flex;
           display: -ms-flexbox;
           display: flex;
-          -webkit-box-flex: 1;
-          -webkit-flex: 1;
-              -ms-flex: 1;
-                  flex: 1;
+          -webkit-box-flex: 1 1 auto;
+          -webkit-flex: 1 1 auto;
+              -ms-flex: 1 1 auto;
+                  flex: 1 1 auto;
           -webkit-box-orient: vertical;
           -webkit-box-direction: normal;
           -webkit-flex-direction: column;
@@ -65,10 +65,10 @@
             display: -webkit-flex;
             display: -ms-flexbox;
             display: flex;
-            -webkit-box-flex: 1;
-            -webkit-flex: 1;
-                -ms-flex: 1;
-                    flex: 1;
+            -webkit-box-flex: 1 1 auto;
+            -webkit-flex: 1 1 auto;
+                -ms-flex: 1 1 auto;
+                    flex: 1 1 auto;
             -webkit-box-orient: vertical;
             -webkit-box-direction: normal;
             -webkit-flex-direction: column;
@@ -76,7 +76,7 @@
                     flex-direction: column;
           }
         }
-        &__event {-webkit-box-flex: 1;-webkit-flex: 1;-ms-flex: 1;flex: 1;}
+        &__event {-webkit-box-flex: 1 1 auto;-webkit-flex: 1 1 auto;-ms-flex: 1 1 auto;flex: 1 1 auto;}
       }
     }
   }
